# rt-asr

./: .gitignore  Cargo.toml  README.md
asr-core/: Cargo.toml
asr-core/src/: lib.rs  lm.rs  transformer.rs
asr-server/: Cargo.toml  build.rs
asr-server/src/: asr.rs  batched_asr.rs  lib.rs  main.rs  metrics.rs  utils.rs
configs/: config-stt-en_fr-efficient-quantized.toml
