[package]
name = "asr-server"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
hf-hub = { workspace = true }
kaudio = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
asr_core = { workspace = true }
prometheus = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rmp-serde = { workspace = true }
sentencepiece = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }

[features]
default = []
cuda = ["asr_core/cuda", "candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["asr_core/metal", "candle/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = [
    "asr_core/flash-attn",
    "candle-transformers/flash-attn",
]
